--- a/src/components/pages/about.css
+++ b/src/components/pages/about.css
@@ -1,7 +1,8 @@
 
 .jumbotron {
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-content: center;
+    justify-content: center; */
     font-family: milo;
     color:azure;
     background-color: paleturquoise;
