--- a/src/components/about.css
+++ b/src/components/about.css
@@ -6,14 +6,10 @@
     font-family: milo;
     color:azure;
     background-color: paleturquoise;
-    background-image: url('../../assets/DARKcodingbackground.png');
+    background-image: url('../assets/DARKcodingbackground.png');
     height: 500px;
 }
 
 #name {
     font-size: 5em;
-}
-
-.img {
-    background-image: url('../../assets/FpsIDb&w.jpg');
 }
