--- a/src/components/about.css
+++ b/src/components/about.css
@@ -8,13 +8,13 @@
     /* background-color: paleturquoise; */
     background-image: url('../assets/DARKcodingbackground.png');
     /* height: 500px; */
-    background-size: cover;
+    background-size:auto;
     background-repeat: no-repeat;
     height: calc(50vh - 25px);
 }
 
 #name {
-    font-size: 7em;
+    font-size: 100px;
 }
 
 .wrapper {
@@ -33,7 +33,7 @@
     align-content: flex-start;
     justify-content: left;
     font-family: milo;
-    font-size: 1.5em;
+    font-size: 18px;
     /* background-color: cornflowerblue; */
     margin-top: 0;
     /* margin: 35px; */
